# counting-skittles

./: .gitignore  CMakeLists.txt  README.md  log.txt  main.py  run.py  run.sh
data/: labels.json
src/: Count.cpp
